--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div><img src="/public/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre"></div>
+        <div><img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre"></div>
         <p>Lugar para poner barra de búsqueda</p>
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
@@ -22,30 +22,30 @@
                 <li><a href="#">Ingresá</a></li>
                 <li><a href="#">Mis compras</a></li>
             </ul>
-            <img width="360" src="/public/images/img-home-banner.jpg" alt="Banner">
+            <img width="360" src="images/img-home-banner.jpg" alt="Banner">
         </nav>
     </header>
     <main>
 <section >
     <h2>Basado en tu última visita</h2>
    <article>
-       <img width="360" src="/public/images/img-cafetera-moulinex.jpg" alt="Cafetera img-cafetera-moulinex">
+       <img width="360" src="images/img-cafetera-moulinex.jpg" alt="Cafetera img-cafetera-moulinex">
     <p>$6.770</p>
     <p>40% off</p>
     <h3>Cafetera Moulinex</h3>
 </article>
    <article>
-       <img width="360" src="/public/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+       <img width="360" src="images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
     <p>$230.000</p>
     <p>20% off</p>
     <h3>MacBook Pro 2019</h3>
 </article>
-   <article><img width="360" src="/public/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+   <article><img width="360" src="images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
     <p>$70.500</p>
     <p>10% off</p>
     <h3>Samsung Galaxy S10</h3>
 </article>
-   <article><img width="360" src="/public/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
+   <article><img width="360" src="images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
     <p>$23.200</p>
     <p>5% off</p>
     <h3>SmartTv Samsung 43"</h3>
@@ -54,23 +54,23 @@
 <section >
     <h2>Sección de Ofertas</h2>
    <article>
-       <img width="360" src="/public/images/img-cafetera-moulinex.jpg" alt="Cafetera img-cafetera-moulinex">
+       <img width="360" src="images/img-cafetera-moulinex.jpg" alt="Cafetera img-cafetera-moulinex">
     <p>$6.770</p>
     <p>40% off</p>
     <h3>Cafetera Moulinex</h3>
 </article>
    <article>
-       <img width="360" src="/public/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+       <img width="360" src="images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
     <p>$230.000</p>
     <p>20% off</p>
     <h3>MacBook Pro 2019</h3>
 </article>
-   <article><img width="360" src="/public/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+   <article><img width="360" src="images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
     <p>$70.500</p>
     <p>10% off</p>
     <h3>Samsung Galaxy S10</h3>
 </article>
-<article><img width="360" src="/public/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
+<article><img width="360" src="images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
     <p>$23.200</p>
     <p>5% off</p>
     <h3>SmartTv Samsung 43"</h3>
