--- a/views/home.html
+++ b/views/home.html
@@ -26,73 +26,76 @@
         </nav>
     </header>
     <main>
-<section >
-    <h2>Basado en tu última visita</h2>
-   <article>
-       <img width="360" src="images/img-cafetera-moulinex.jpg" alt="Cafetera img-cafetera-moulinex">
-    <p>$6.770</p>
-    <p>40% off</p>
-    <h3>Cafetera Moulinex</h3>
-</article>
-   <article>
-       <img width="360" src="images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
-    <p>$230.000</p>
-    <p>20% off</p>
-    <h3>MacBook Pro 2019</h3>
-</article>
-   <article><img width="360" src="images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
-    <p>$70.500</p>
-    <p>10% off</p>
-    <h3>Samsung Galaxy S10</h3>
-</article>
-   <article><img width="360" src="images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
-    <p>$23.200</p>
-    <p>5% off</p>
-    <h3>SmartTv Samsung 43"</h3>
-</article>
-</section>
-<section >
-    <h2>Sección de Ofertas</h2>
-   <article>
-       <img width="360" src="images/img-cafetera-moulinex.jpg" alt="Cafetera img-cafetera-moulinex">
-    <p>$6.770</p>
-    <p>40% off</p>
-    <h3>Cafetera Moulinex</h3>
-</article>
-   <article>
-       <img width="360" src="images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
-    <p>$230.000</p>
-    <p>20% off</p>
-    <h3>MacBook Pro 2019</h3>
-</article>
-   <article><img width="360" src="images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
-    <p>$70.500</p>
-    <p>10% off</p>
-    <h3>Samsung Galaxy S10</h3>
-</article>
-<article><img width="360" src="images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
-    <p>$23.200</p>
-    <p>5% off</p>
-    <h3>SmartTv Samsung 43"</h3>
-</article>
-</section>
+        <section >
+            <h2>Basado en tu última visita</h2>
+            <article>
+                <img width="360" src="images/img-cafetera-moulinex.jpg" alt="Cafetera img-cafetera-moulinex">
+                <p>$6.770</p>
+                <p>40% off</p>
+                <h3>Cafetera Moulinex</h3>
+            </article>
+            <article>
+                <img width="360" src="images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+                <p>$230.000</p>
+                <p>20% off</p>
+                <h3>MacBook Pro 2019</h3>
+            </article>
+            <article>
+                <img width="360" src="images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+                <p>$70.500</p>
+                <p>10% off</p>
+                <h3>Samsung Galaxy S10</h3>
+            </article>
+            <article><img width="360" src="images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
+                <p>$23.200</p>
+                <p>5% off</p>
+                <h3>SmartTv Samsung 43"</h3>
+            </article>
+        </section>
+        <section >
+            <h2>Sección de Ofertas</h2>
+            <article>
+                <img width="360" src="images/img-cafetera-moulinex.jpg" alt="Cafetera img-cafetera-moulinex">
+                <p>$6.770</p>
+                <p>40% off</p>
+                <h3>Cafetera Moulinex</h3>
+            </article>
+            <article>
+                <img width="360" src="images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+                <p>$230.000</p>
+                <p>20% off</p>
+                <h3>MacBook Pro 2019</h3>
+            </article>
+            <article>
+                <img width="360" src="images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+                <p>$70.500</p>
+                <p>10% off</p>
+                <h3>Samsung Galaxy S10</h3>
+            </article>
+            <article>
+                <img width="360" src="images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
+                <p>$23.200</p>
+                <p>5% off</p>
+                <h3>SmartTv Samsung 43"</h3>
+            </article>
+        </section>
     </main>
     <footer>
-<section>
-    <h4>Pagá con tarjeta o en efectivo</h4>
-    <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o en efectivo en puntos de pago.¡Y siempre es seguro!</p>
-</section>
-<section>
-    <h4>Envío gratis desde los $2500</h4>
-    <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos.Es un beneficio de Mercado Puntos.</p>
-</section>
-<section>
-    <h4>Seguridad de principio a fin</h4>
-    <p>¿No te gusta?¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre protegid@</p>
-</section>
-<section>
-    <p>Copyright c 1999-2020 MercadoLiebre S.R.L.</p>
-</section>
+        <section>
+            <h4>Pagá con tarjeta o en efectivo</h4>
+            <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o en efectivo en puntos de pago.¡Y siempre es seguro!</p>
+        </section>
+        <section>
+            <h4>Envío gratis desde los $2500</h4>
+            <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos.Es un beneficio de Mercado Puntos.</p>
+        </section>
+        <section>
+            <h4>Seguridad de principio a fin</h4>
+            <p>¿No te gusta?¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre protegid@</p>
+        </section>
+        <section>
+            <p>Copyright c 1999-2020 MercadoLiebre S.R.L.</p>
+        </section>
     </footer>
 </body>
 </html>
